--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <script src="https://kit.fontawesome.com/a81368914c.js"></script>
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
